--- a/package.json
+++ b/package.json
@@ -10,19 +10,19 @@
 		"@vercel/analytics": "^1.3.1",
 		"@vercel/speed-insights": "^1.0.12",
 		"lucide-react": "^0.395.0",
+		"prop-types": "^15.8.1",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
 		"react-notion": "^0.10.0",
 		"react-router-dom": "^6.23.1",
-		"react-scripts": "5.0.1",
 		"sass": "^1.77.8",
+		"vite-plugin-svgr": "^4.5.0",
 		"web-vitals": "^2.1.4"
 	},
 	"scripts": {
-		"start": "react-scripts start",
-		"build": "react-scripts build",
-		"test": "react-scripts test",
-		"eject": "react-scripts eject"
+		"start": "vite",
+		"build": "vite build",
+		"dev": "vite preview"
 	},
 	"eslintConfig": {
 		"extends": [
@@ -41,5 +41,9 @@
 			"last 1 firefox version",
 			"last 1 safari version"
 		]
+	},
+	"devDependencies": {
+		"@vitejs/plugin-react": "^5.0.1",
+		"vite": "^7.1.3"
 	}
 }
